--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- === UNICONS === -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
+    <!-- === SWIPER CSS === -->
+    <link rel="stylesheet" href="style.css">
+    <!-- === STYLE CSS === -->
     <link rel="stylesheet" href="/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <!-- === SWIPER JS === -->
+    <script src=""></script>
+    <!-- === MAIN JS === -->
+    <script src="/js/main.js"></script>
 </body>
 </html>
