--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- === UNICONS === -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
-    <!-- === SWIPER CSS === -->
-    <link rel="stylesheet" href="/css/swiper-bundle.min.css">
     <!-- === STYLE CSS === -->
     <link rel="stylesheet" href="/css/style.css">
     <title>Portfolio</title>
@@ -174,11 +172,61 @@
                 </div>
             </div>
         </section>
+        <!-- === CONTACT === -->
+        <section class="contact section" id="contact">
+            <h2 class="section__title">Contact Me</h2>
+            <span class="section__subtitle">Get In Touch</span>
+
+            <div class="contact__container container grid">
+                <div>
+                    <div class="contact__information">
+                        <i class="uil uil-phone contact__icon"></i>
+
+                        <div>
+                            <h3 class="contact__title">Call Me</h3>
+                            <span class="contact__subtitle">081 539 2443</span>
+                        </div>
+                    </div>
+                    <div class="contact__information">
+                        <i class="uil uil-envelope contact__icon"></i>
+
+                        <div>
+                            <h3 class="contact__title">Email</h3>
+                            <span class="contact__subtitle">ntshingilab@outlook.com</span>
+                        </div>
+                    </div>
+                    <div class="contact__information">
+                        <i class="uil uil-map-marker contact__icon"></i>
+
+                        <div>
+                            <h3 class="contact__title">Location</h3>
+                            <span class="contact__subtitle">Johannesburg, Gauteng</span>
+                        </div>
+                    </div>
+                </div>
+                <form action="" class="contact__form grid">
+                    <div class="contact__inputs grid">
+                        <div class="contact__content">
+                            <label for="" class="contact__label">Name</label>
+                            <input type="text" class="contact__input">
+                        </div>
+                        <div class="contact__content">
+                            <label for="" class="contact__label">Email</label>
+                            <input type="email" class="contact__input">
+                        </div>
+                    </div>
+                    <div class="contact__content">
+                        <label for="" class="contact__label">Message</label>
+                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                    </div>
+                    <div>
+                        <a href="#" class="button button--flex">Send Message <i class="uil uil-message button__icon"></i></a>
+                    </div>
+                </form>
+            </div>
+        </section>
 
     </main>
-
-    <!-- === SWIPER JS === -->
-    <script src="/js/swiper-bundle.min.js"></script>
     <!-- === MAIN JS === -->
     <script src="/js/main.js"></script>
 </body>
