--- a/index.html
+++ b/index.html
@@ -227,6 +227,39 @@
         </section>
 
     </main>
+    <!-- === FOOTER === -->
+    <footer class="footer">
+        <div class="footer__bg">
+            <div class="footer__container container grid">
+                <div>
+                    <h1 class="footer__title">Bongani</h1>
+                    <span class="footer__subtitle">Front-End Developer</span>
+                </div>
+
+                <ul class="footer__links">
+                    <li>
+                        <a href="#about" class="footer__link">About</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio" class="footer__link">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contact" class="footer__link">Contact Me</a>
+                    </li>
+                </ul>
+                <div class="footer__socials">
+                    <a href="#" target="_blank" class="footer__social">
+                        <i class="uil uil-linkedin-alt"></i>
+                    </a>
+                    <a href="#" target="_blank" class="footer__social">
+                        <i class="uil uil-github-alt"></i>
+                    </a>
+                </div>
+            </div>
+            <p class="footer__copy">&#169 Bongani Ntshingila 2022</p>
+        </div>
+    </footer>
+    <!-- === SCROLL TOP === -->
     <!-- === MAIN JS === -->
     <script src="/js/main.js"></script>
 </body>
