dark/light toggle

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             </div>
 
             <div class="nav__btns">
+                <!-- Theme Change Button -->
+                <i class="uil uil-moon change-theme" id="theme-button"></i>
+
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
@@ -227,6 +230,7 @@
         </section>
 
     </main>
+
     <!-- === FOOTER === -->
     <footer class="footer">
         <div class="footer__bg">
@@ -259,7 +263,11 @@
             <p class="footer__copy">&#169 Bongani Ntshingila 2022</p>
         </div>
     </footer>
+
     <!-- === SCROLL TOP === -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
     <!-- === MAIN JS === -->
     <script src="/js/main.js"></script>
 </body>
