--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="" target="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/in/bongani-ntshingila-b12842246/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="" target="_blank" class="home__social-icon">
+                        <a href="https://github.com/newnormal-arch" target="_blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
@@ -207,23 +207,25 @@
                         </div>
                     </div>
                 </div>
-                <form action="" class="contact__form grid">
+                <form action="https://formspree.io/f/mvoleejk" method="post" class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input type="text" name="name" class="contact__input">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <input type="email" name="email" class="contact__input">
                         </div>
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
                     </div>
                     <div>
-                        <a href="#" class="button button--flex">Send Message <i class="uil uil-message button__icon"></i></a>
+                        <button class="contact__btn-submit" type="submit">
+                            <a class="button button--flex">Send Message <i class="uil uil-message button__icon"></i></a>
+                        </button>
                     </div>
                 </form>
             </div>
@@ -252,10 +254,10 @@
                     </li>
                 </ul>
                 <div class="footer__socials">
-                    <a href="#" target="_blank" class="footer__social">
+                    <a href="https://www.linkedin.com/in/bongani-ntshingila-b12842246/" target="_blank" class="footer__social">
                         <i class="uil uil-linkedin-alt"></i>
                     </a>
-                    <a href="#" target="_blank" class="footer__social">
+                    <a href="https://github.com/newnormal-arch" target="_blank" class="footer__social">
                         <i class="uil uil-github-alt"></i>
                     </a>
                 </div>
