--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">eCommerce Watch Store</h3>
-                            <p class="portfolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <p class="portfolio__description">An e-commerce UI for watches with a clean and minimalistic design for a more aesthetically pleasing look.</p>
+                            <a href="https://github.com/newnormal-arch/e_commerce_watch_store" class="button button--flex button--small portfolio__button">
                                 Github <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
