--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                     </div>
                     <!-- === PORTFOLIO 2 === -->
                     <div class="portfolio__content grid">
-                        <img src="/assets/images/portfolio1.png" alt="" class="portfolio__img">
+                        <img src="/assets/images/portfolio2.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">eCommerce Watch Store</h3>
-                            <p class="portfolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">To Do App</h3>
+                            <p class="portfolio__description">Simple To Do app which is functional and compact to keep you on track.</p>
+                            <a href="https://github.com/newnormal-arch/todo_app" class="button button--flex button--small portfolio__button">
                                 Github <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
