--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="portfolio__container container">
                 <div class="">
                     <!-- === PORTFOLIO 1 === -->
-                    <div class="portfolio__content grid">
+                    <!-- <div class="portfolio__content grid">
                         <img src="/assets/images/portfolio1.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
@@ -147,7 +147,7 @@
                                 Github <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- === PORTFOLIO 2 === -->
                     <div class="portfolio__content grid">
                         <img src="/assets/images/portfolio2.png" alt="" class="portfolio__img">
