--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Bongani</h1>
                         <h3 class="home__subtitle">Front-End Developer</h3>
-                        <p class="home__description">High level experience in web design and development knowledge, producing quality work.</p>
+                        <p class="home__description">I am a creative and passionate self-taught Flutter Developer. I love to create Mobile and Web Apps.</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
@@ -120,7 +120,7 @@
                 <img src="/assets/images/profile_avatar.png" alt="" class="about__img">
 
                 <div class="about__data">
-                    <p class="about__description">Web developer, with extensive knowledge and years of experience, working in web technologies and Ui / Ux design, delivering quality work.</p>
+                    <p class="about__description">I am a creative and passionate self-taught Flutter Developer. I have been working with Flutter for 2 years, and I have been developing apps for the last year and a half. I love to create Mobile and Web Applications.</p>
                     <div class="about__buttons">
                         <a download="" href="/assets/docs/resume.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
