--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
     <!-- === STYLE CSS === -->
     <link rel="stylesheet" href="/css/style.css">
-    <title>Portfolio</title>
+    <!-- === FAVICONS === -->
+    <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
+    <title>Bongani's Portfolio</title>
 </head>
 
 <body>
