--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- === UNICONS === -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
     <!-- === STYLE CSS === -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- === FAVICONS === -->
-    <link rel="icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./assets/images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="./assets/images/favicon-32x32.png" sizes="32x32" />
     <title>Bongani's Portfolio</title>
 </head>
 
@@ -91,7 +91,7 @@
                                 165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                <image class="home__blob-img" x="12" y="18" xlink:href="/assets/images/profile_avatar_transparent.png"/>
+                                <image class="home__blob-img" x="12" y="18" xlink:href="./assets/images/profile_avatar_transparent.png"/>
                             </g>
                         </svg>
                     </div>
@@ -120,12 +120,12 @@
             <span class="section__subtitle">My Introduction</span>
 
             <div class="about__container container grid">
-                <img src="/assets/images/profile_avatar.png" alt="" class="about__img">
+                <img src="./assets/images/profile_avatar.png" alt="" class="about__img">
 
                 <div class="about__data">
                     <p class="about__description">I am a creative and passionate self-taught Flutter Developer. I have been working with Flutter for 2 years, and I have been developing apps for the last year and a half. I love to create Mobile and Web Applications.</p>
                     <div class="about__buttons">
-                        <a download="" href="/assets/docs/resume.pdf" class="button button--flex">
+                        <a download="" href="./assets/docs/resume.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -141,7 +141,7 @@
                 <div class="">
                     <!-- === PORTFOLIO 1 === -->
                     <div class="portfolio__content grid">
-                        <img src="/assets/images/portfolio3.png" alt="" class="portfolio__img">
+                        <img src="./assets/images/portfolio3.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Marketing Tool</h3>
@@ -153,7 +153,7 @@
                     </div>
                     <!-- === PORTFOLIO 2 === -->
                     <div class="portfolio__content grid">
-                        <img src="/assets/images/portfolio2.png" alt="" class="portfolio__img">
+                        <img src="./assets/images/portfolio2.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">To Do App</h3>
@@ -165,7 +165,7 @@
                     </div>
                     <!-- === PORTFOLIO 3 === -->
                     <div class="portfolio__content grid">
-                        <img src="/assets/images/portfolio1.png" alt="" class="portfolio__img">
+                        <img src="./assets/images/portfolio1.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">eCommerce Watch Store</h3>
@@ -274,7 +274,7 @@
         <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
     <!-- === MAIN JS === -->
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
