portfolio & personal info updates

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/in/bongani-ntshingila-b12842246/" target="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/in/bongani-ntshingila/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                         <a href="https://github.com/newnormal-arch" target="_blank" class="home__social-icon">
@@ -99,7 +99,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Bongani</h1>
                         <h3 class="home__subtitle">Front-End Developer</h3>
-                        <p class="home__description">I am a creative and passionate self-taught Flutter Developer. I love to create Mobile and Web Apps.</p>
+                        <p class="home__description">I am a creative and passionate Front-End Developer and self-taught Flutter Developer.</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
@@ -120,12 +120,12 @@
             <span class="section__subtitle">My Introduction</span>
 
             <div class="about__container container grid">
-                <img src="./assets/images/profile_avatar.png" alt="" class="about__img">
+                <img src="./assets/images/ProfilePic-modified.png" alt="" class="about__img">
 
                 <div class="about__data">
-                    <p class="about__description">I am a creative and passionate self-taught Flutter Developer. I have been working with Flutter for 2 years, and I have been developing apps for the last year and a half. I love to create Mobile and Web Applications.</p>
+                    <p class="about__description">Highly motivated and proactive Junior Front-end Developer seeking a challenging position to apply and enhance my technical skills. With a solid foundation in programming languages such as HTML, CSS, JavaScript and Bootsrap, I am eager to contribute to a dynamic team and gain hands-on experience in software development.</p>
                     <div class="about__buttons">
-                        <a download="" href="./assets/docs/resume.pdf" class="button button--flex">
+                        <a download="" href="./assets/docs/Bongani_Ntshingila_Resume.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -141,36 +141,45 @@
                 <div class="">
                     <!-- === PORTFOLIO 1 === -->
                     <div class="portfolio__content grid">
-                        <img src="./assets/images/portfolio3.png" alt="" class="portfolio__img">
+                        <img src="./assets/images/beauty_republic.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Marketing Tool</h3>
-                            <p class="portfolio__description">A marketing tool app that lets you control your marketing and advertising tools in one place.</p>
-                            <a href="https://github.com/newnormal-arch/marketing_tool_ui" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Beauty Republic Website</h3>
+                            <p class="portfolio__description">This website was built with HTML, CSS, SCSS, JavaScript and Bootstrap. It is a fictional beauty app like Uber that provides beauty services to your doorstep</p>
+                            <a href="https://newnormal-arch.github.io/Beauty/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Live Preview <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                            <a href="https://github.com/newnormal-arch/Beauty" target="_blank" class="button button--flex button--small portfolio__button">
                                 Github <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
                     <!-- === PORTFOLIO 2 === -->
                     <div class="portfolio__content grid">
-                        <img src="./assets/images/portfolio2.png" alt="" class="portfolio__img">
+                        <img src="./assets/images/melsoft_website.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">To Do App</h3>
-                            <p class="portfolio__description">Simple To Do app which is functional and compact to keep you on track.</p>
-                            <a href="https://github.com/newnormal-arch/todo_app" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Melsoft Website</h3>
+                            <p class="portfolio__description">This website was built using HTML, CSS, JavaScript and Bootstrap. It is a redesign on the already existing Melsoft website using a bootstrap template</p>
+                            <a href="https://newnormal-arch.github.io/melsoft-bootstrap-website/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Live Preview <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                            <a href="https://github.com/newnormal-arch/melsoft-bootstrap-website" target="_blank" class="button button--flex button--small portfolio__button">
                                 Github <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
                     <!-- === PORTFOLIO 3 === -->
                     <div class="portfolio__content grid">
-                        <img src="./assets/images/portfolio1.png" alt="" class="portfolio__img">
+                        <img src="./assets/images/flower_shop.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">eCommerce Watch Store</h3>
-                            <p class="portfolio__description">An e-commerce UI for watches with a clean and minimalistic design for a more aesthetically pleasing look.</p>
-                            <a href="https://github.com/newnormal-arch/e_commerce_watch_store" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Flower Shop Website</h3>
+                            <p class="portfolio__description">This website was built with HTML and CSS with a bit of JavaScript. It is a fictional flower shop inspired by a design found on Figma by <strong>@rishav_design</strong></p>
+                            <a href="https://newnormal-arch.github.io/flower-shop-website/" target="_blank" class="button button--flex button--small portfolio__button">
+                                Live Preview <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                            <a href="https://github.com/newnormal-arch/flower-shop-website" target="_blank" class="button button--flex button--small portfolio__button">
                                 Github <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -190,7 +199,7 @@
 
                         <div>
                             <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">081 539 2443</span>
+                            <span class="contact__subtitle">069 231 4691</span>
                         </div>
                     </div>
                     <div class="contact__information">
@@ -257,7 +266,7 @@
                     </li>
                 </ul>
                 <div class="footer__socials">
-                    <a href="https://www.linkedin.com/in/bongani-ntshingila-b12842246/" target="_blank" class="footer__social">
+                    <a href="https://www.linkedin.com/in/bongani-ntshingila/" target="_blank" class="footer__social">
                         <i class="uil uil-linkedin-alt"></i>
                     </a>
                     <a href="https://github.com/newnormal-arch" target="_blank" class="footer__social">
@@ -265,7 +274,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&#169 Bongani Ntshingila 2022</p>
+            <p class="footer__copy">&#169 Bongani Ntshingila 2023</p>
         </div>
     </footer>
 
